--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
   "main": "src/index.js",
   "nativePackage": true,
   "pre-commit": "lint:staged",
-  "repository": "https://github.com/react-native-community/react-native-camera.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-native-community/react-native-camera.git"
+  },
   "scripts": {
     "commit": "git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
