--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-camera",
   "description": "A Camera component for React Native. Also reads barcodes.",
   "version": "4.2.1",
+  "yarn": ">=1.22.0",
   "author": "Lochlan Wansbrough <lochie@live.com> (http://lwansbrough.com)",
   "collective": {
     "type": "opencollective",
