--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-native-camera",
+  "yarn": ">=1.22.0",
   "description": "A Camera component for React Native. Also reads barcodes.",
   "version": "4.2.1",
   "author": "Lochlan Wansbrough <lochie@live.com> (http://lwansbrough.com)",
