--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "packageManager": "yarn@3.6.4",
   "name": "react-native-camera",
   "description": "A Camera component for React Native. Also reads barcodes.",
   "version": "4.2.1",
